--- a/manifest.yml
+++ b/manifest.yml
@@ -1,6 +1,8 @@
 applications:
   - name: pal-tracker
-    random-route : true
+    #random-route : true
+    routes:
+      -route: pal-tracker-swetha.apps.test
     env:
-      WELCOME-MESSAGE : welcome
+      WELCOME_MESSAGE : Hello from the review environment
     path : build/libs/pal-tracker.jar
