--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ jobs:
       language: java
       jdk: oraclejdk8
       install: skip
+      before_install:
+        - chmod +x /.gradlew
       script: ./gradlew clean build
       before_deploy:
         - git config --local user.name "Travis CI"
