--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,7 @@ jobs:
       language: java
       jdk: oraclejdk8
       install: skip
-      before_install:
-        - chmod +x gradlew
-      script: gradle clean build
+      script: /.gradlew clean build
       before_deploy:
         - git config --local user.name "Travis CI"
         - git config --local user.email "travis@example.com"
