--- a/manifest.yml
+++ b/manifest.yml
@@ -1,8 +1,15 @@
+---
 applications:
   - name: pal-tracker
-    #random-route : true
+    path: build/libs/pal-tracker.jar
     routes:
-      -route: pal-tracker-swetha.apps.test
+      - route: pal-tracker-pietro-sampsonite.apps.chicken.pal.pivotal.io
     env:
-      WELCOME_MESSAGE : Hello from the review environment
-    path : build/libs/pal-tracker.jar
+      WELCOME_MESSAGE: Hello from the review environment
+    memory: 1G
+    instances: 2
+    #services:
+
+     #   - tracker-allocations-database
+
+      #  - tracker-service-registry
