manifest routes syntax

--- a/manifest.yml
+++ b/manifest.yml
@@ -3,7 +3,7 @@ applications:
   - name: pal-tracker
     path: build/libs/pal-tracker.jar
     routes:
-      - route: pal-tracker-pietro-sampsonite.apps.chicken.pal.pivotal.io
+      - route:  pal-tracker-swetha-travis.cfapps.io
     env:
       WELCOME_MESSAGE: Hello from the review environment
     memory: 1G
