--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,11 @@ jobs:
       language: java
       jdk: oraclejdk8
       install: skip
-      script: ./gradlew clean build
+      before_install:
+        - pwd
+        - ls -la
+        - chmod +x ./gradlew
+      script: ./gradle clean build
       before_deploy:
         - git config --local user.name "Travis CI"
         - git config --local user.email "travis@example.com"
